--- a/prepros.config
+++ b/prepros.config
@@ -927,6 +927,19 @@
         }
       }
     },
-    "files": []
+    "files": [
+      {
+        "file": "style/basket.kit",
+        "config": {
+          "customOutput": "basket.html"
+        }
+      },
+      {
+        "file": "style/index.kit",
+        "config": {
+          "customOutput": "index.html"
+        }
+      }
+    ]
   }
 }
